# d4gen

./: CONTEXT.md  Dockerfile  README.md  pyproject.toml
.streamlit/: config.toml
data/: experiments.csv
data/datasets/: dataset_1.csv  example_lab.csv
data/models/mine/205261a29e/: encaps_pct.joblib  meta.json  pdi.joblib  zeta_mv.joblib
data/models/mine/cebbebd26d/: meta.json  size_nm.joblib
data/seed/: example_lab.csv
livrables-ml/: NanoOracle_Dataset_public_research.xlsx  NanoOracle_Dataset_v3_verified_cleaned_v2_train_benjamin.xlsx  ml_pipeline_ben_dataset.ipynb  ml_pipeline_public_research_dataset.ipynb  nanooracle_analysis.ipynb
livrables-ml/nanooracle/: .gitignore  README.md  requirements.txt
livrables-ml/nanooracle/data/: NanoOracle_Dataset_v3_verified_cleaned_v2_test_3.xlsx
livrables-ml/nanooracle/notebooks/: 01_analysis_split.ipynb  02_pipeline_labo.ipynb  03_pipeline_literature.ipynb
pkl/: nanooracle_benjamin_PDI.pkl
src/: app.py  model_backend.py
src/lib/: datasets.py  inference.py  schema.py  storage.py  training.py
src/views/: data.py  predict.py  train.py
web-mpv/: .dockerignore  Dockerfile  README.md  pyproject.toml
web-mpv/data/datasets/: dataset_1.csv
web-mpv/data/models/mine/f469215d1f/: encaps_pct.joblib  meta.json  pdi.joblib  size_nm.joblib  zeta_mv.joblib
web-mpv/data/models/shared/shared_v1/: encaps_pct.joblib  meta.json
web-mpv/scripts/: deploy.sh  generate_seed.py
web-mpv/src/: app.py
web-mpv/src/lib/: benjamin.py  registry.py  schema.py  training.py
web-mpv/src/views/: data.py  predict.py  train.py
(+2 files in other folders)
