[project]
name = "d4gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "streamlit>=1.58.0",
    "joblib>=1.5.3",
    "openpyxl>=3.1.5",
    "xgboost>=2.0",
]
